# gen-sdk-toolset

./: .env.example  .gitignore  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  gen_pipeline.md  pyproject.toml  scan-config.toml
.github/workflows/: automerge.yaml  ci.yaml
docs/: architecture.md  gen_pipeline.md
docs/examples/: README.md  repo_scan_example.json
docs/modular/: new_arch.md
docs/research/: mcp.md  otcextensions.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/mock/: scanApi.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  HealthStatus.tsx  TabBar.tsx
src/gen_sdk_tooling/: config.py  main.py
src/gen_sdk_tooling/domain/: exceptions.py  report.py
src/gen_sdk_tooling/parsers/: scanner.py
src/tools/: __init__.py  config.py  main.py
src/tools/domain/: report.py
src/tools/panel/: README.md  cli.py  openapi.json
src/tools/scanner/: __init__.py  __main__.py  discovery.py  eligibility.py  factory.py  main.py  service.py
tests/: conftest.py  test_analytics_assemble.py  test_analytics_examples.py  test_anchor_capture.py  test_discovery.py  test_doc_parser.py  test_document_model.py  test_eligibility.py  test_example_inference.py  test_github_client.py  test_ir_parameter.py  test_nested_wire_in.py  test_nesting.py  test_panel_db.py  test_parameter_types.py  test_ref_resolution.py  test_repo_scan_example.py  test_report_analytics.py  test_repository_model.py  test_scan_job_api.py  test_scanner.py  test_scanner_cli.py  test_section_classifier.py  test_section_model.py  test_style_classifier.py
tests/fixtures/: style_a_anti_ddos_direct_response.rst  style_a_anti_ddos_get_request.rst  style_a_anti_ddos_legacy_uri.rst  style_a_anti_ddos_root_endpoint.rst  style_a_cce_grid.rst  style_a_elb_list_query.rst  style_a_iam_ref_in_param.rst  style_a_kms_simple_table.rst  style_a_two_body_tables.rst  style_a_vpc_with_refs.rst  style_b_obs.rst
(+137 files in other folders)
