[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen-sdk-tooling"
version = "0.1.0"
description = "Automated Python SDK generation from OTC API documentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.14.2,<3",
    "requests>=2.32,<3",
    "docutils>=0.21,<1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "ruff>=0.15",
    "import-linter>=2.0",
]
panel = ["fastapi", "sqlalchemy>=2.0", "alembic", "uvicorn"]

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]

[tool.importlinter]
root_package = "tools"

[[tool.importlinter.contracts]]
name = "domain is independent of infrastructure"
type = "forbidden"
source_modules = ["tools.domain"]
forbidden_modules = ["tools.infrastructure"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["*/migrations/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
gen-sdk-scan = "tools.main:main"
